helm/kube-prometheus-stack/ing.yml
apiVersion: v1
items:
- apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"networking.k8s.io/v1","kind":"Ingress","metadata":{"annotations":{},"name":"prometheus-grafana-stack","namespace":"monitoring"},"spec":{"ingressClassName":"nginx","rules":[{"host":"prod-grafana.sohato.com","http":{"paths":[{"backend":{"service":{"name":"prometheus-grafana-stack","port":{"number":80}}},"path":"/","pathType":"Prefix"}]}}]},"status":{"loadBalancer":{"ingress":[{"ip":null}]}}}
    creationTimestamp: "2023-04-10T13:32:33Z"
    generation: 1
    name: prometheus-grafana-stack
    namespace: monitoring
    resourceVersion: "37005302"
    uid: 88f128b3-7fa0-4703-a909-d127cca75271
  spec:
    ingressClassName: nginx
    rules:
    - host: prod-grafana.sohato.com
      http:
        paths:
        - backend:
            service:
              name: prometheus-grafana-stack
              port:
                number: 80
          path: /
          pathType: Prefix
  status:
    loadBalancer:
      ingress:
      - ip: 192.168.150.161
- apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"networking.k8s.io/v1","kind":"Ingress","metadata":{"annotations":{},"name":"prometheus-web","namespace":"monitoring"},"spec":{"ingressClassName":"nginx","rules":[{"host":"prod-prometheus.sohato.com","http":{"paths":[{"backend":{"service":{"name":"prometheus-operated","port":{"number":9090}}},"path":"/","pathType":"Prefix"}]}}]},"status":{"loadBalancer":{"ingress":[{"ip":null}]}}}
    creationTimestamp: "2023-04-10T17:32:33Z"
    generation: 1
    name: prometheus-web
    namespace: monitoring
    resourceVersion: "37055277"
    uid: 197fc4f5-99fe-418c-a665-9fd87aa718e3
  spec:
    ingressClassName: nginx
    rules:
    - host: prod-prometheus.sohato.com
      http:
        paths:
        - backend:
            service:
              name: prometheus-operated
              port:
                number: 9090
          path: /
          pathType: Prefix
  status:
    loadBalancer:
      ingress:
      - ip: 192.168.150.161
kind: List
metadata:
  resourceVersion: ""
